force-app/main/default/objects/Lead_Request__c/fields/Count_of_leads_distributed__c.field-meta.xml
<CustomField>
    <fullName>Count_of_leads_distributed__c</fullName>
    <description>Count of leads distributed if Approved</description>
    <label>Count of leads distributed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>