force-app/main/default/objects/Lead_Request__c/fields/Count_of_Rep_Active_Leads__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Rep_Active_Leads__c</fullName>
    <description>Displays the current number of working leads currently owned by rep. (Sprint 18)</description>
    <inlineHelpText>Displays the current number of working leads currently owned by rep.</inlineHelpText>
    <label>Count of Rep Active Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>