force-app/main/default/objects/Lead_Request__c/fields/Date_Time_of_Close__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_Close__c</fullName>
    <description>Date and time of Lead Request completion</description>
    <label>Date/Time of Close</label>
    <type>DateTime</type>
</CustomField>