force-app/main/default/objects/Lead_Request__c/fields/Date_Time_of_request__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_request__c</fullName>
    <description>Date/Time stamp of request</description>
    <label>Date/Time of request</label>
    <type>DateTime</type>
</CustomField>