force-app/main/default/objects/Lead_Request__c/fields/Declined_Reason__c.field-meta.xml
<CustomField>
    <fullName>Declined_Reason__c</fullName>
    <description>General reason for being declined</description>
    <label>Declined Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Request_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Too many leads in your ownership that need to be engaged</fullName>
            </value>
            <value>
                <fullName>Exceeded weekly lead limit</fullName>
            </value>
            <value>
                <fullName>Exceeded monthly lead limit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>