force-app/main/default/objects/Lead_Request__c/fields/Leads_owned_but_not_called_in_5_days__c.field-meta.xml
<CustomField>
    <fullName>Leads_owned_but_not_called_in_5_days__c</fullName>
    <description>Leads currently owned were last call is greater then 3 days ago</description>
    <label>Leads owned but not called in 5 days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>