force-app/main/default/objects/Lead_Request__c/fields/Leads_owned_but_not_yet_called__c.field-meta.xml
<CustomField>
    <fullName>Leads_owned_but_not_yet_called__c</fullName>
    <description>Leads owned but not yet called (no first call)</description>
    <label>Leads owned but not yet called</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>