force-app/main/default/objects/Lead_Request__c/fields/Re_Evaluate_Counts__c.field-meta.xml
<CustomField>
    <fullName>Re_Evaluate_Counts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, usually through quick action on page layout, record triggered flow &apos;LDC - Record Create Update counts&apos; runs to re-evaluate pipeline metrics.</description>
    <label>Re-Evaluate Counts</label>
    <type>Checkbox</type>
</CustomField>