force-app/main/default/objects/Lead_Request__c/fields/Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Rep_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Rep Name for the requesting OSDR</description>
    <label>Rep Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lead_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>