force-app/main/default/objects/Lead_Request__c/fields/Rep_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Rep_Tenure__c</fullName>
    <description>From User record - official start date</description>
    <formula>Rep_Name__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rep Tenure</label>
    <type>Date</type>
</CustomField>