force-app/main/default/objects/Lead_Request__c/fields/Test_current_month__c.field-meta.xml
<CustomField>
    <fullName>Test_current_month__c</fullName>
    <formula>AND(
    YEAR(DATEVALUE(Date_Time_of_request__c)) = YEAR(TODAY()),
    MONTH(DATEVALUE(Date_Time_of_request__c)) = MONTH(TODAY())
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test current month</label>
    <type>Checkbox</type>
</CustomField>