force-app/main/default/objects/Lead_Request__c/fields/Test_month_end__c.field-meta.xml
<CustomField>
    <fullName>Test_month_end__c</fullName>
    <formula>DATE(
     YEAR(TODAY()),
     MONTH(TODAY()),
     CASE(MONTH(TODAY()), 
          1, 31, 
          2, IF( MOD( YEAR(TODAY()) , 4) = 0, 29, 28), 
          3, 31, 
          4, 30, 
          5, 31, 
          6, 30, 
          7, 31, 
          8, 31, 
          9, 30, 
          10, 31, 
          11, 30, 
          12, 31, 
          0 
     )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test month end</label>
    <type>Date</type>
</CustomField>