force-app/main/default/objects/Lead_Request__c/fields/Test_month_start__c.field-meta.xml
<CustomField>
    <fullName>Test_month_start__c</fullName>
    <formula>DATE( YEAR(TODAY()), MONTH(TODAY()), 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test month start</label>
    <type>Date</type>
</CustomField>