force-app/main/default/objects/Lead_Request__c/fields/Test_week_end__c.field-meta.xml
<CustomField>
    <fullName>Test_week_end__c</fullName>
    <formula>(TODAY() + 7) - MOD(TODAY() - DATE(1900, 1, 7), 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test week end</label>
    <type>Date</type>
</CustomField>