force-app/main/default/objects/Lead_Request__c/fields/Test_week_start__c.field-meta.xml
<CustomField>
    <fullName>Test_week_start__c</fullName>
    <formula>TODAY() - MOD(TODAY() - DATE(1900,1,8),7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test week start</label>
    <type>Date</type>
</CustomField>