force-app/main/default/objects/Lead_Request__c/fields/Total_leads_owned__c.field-meta.xml
<CustomField>
    <fullName>Total_leads_owned__c</fullName>
    <description>Current owned Lead</description>
    <label>Total leads owned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>