force-app/main/default/objects/Lead_Request__c/fields/Unique_leads_dialed_current_month__c.field-meta.xml
<CustomField>
    <fullName>Unique_leads_dialed_current_month__c</fullName>
    <description>1st call made current cal month</description>
    <label>Unique leads dialed current month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>