force-app/main/default/objects/Lead_Request__c/fields/Unique_leads_dialed_current_week__c.field-meta.xml
<CustomField>
    <fullName>Unique_leads_dialed_current_week__c</fullName>
    <description>1st calls made in current cal week</description>
    <label>Unique leads dialed current week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>