force-app/main/default/objects/Lead_Request__c/recordTypes/OSDR_Request.recordType-meta.xml
<RecordType>
    <fullName>OSDR_Request</fullName>
    <active>true</active>
    <description>OSDR Request</description>
    <label>OSDR Request</label>
</RecordType>