force-app/main/default/objects/Lead_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rep_Name__c</columns>
    <columns>Rep_Tenure__c</columns>
    <columns>Date_Time_of_request__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Declined_Reason__c</columns>
    <columns>Date_Time_of_Close__c</columns>
    <columns>Count_of_leads_distributed__c</columns>
    <columns>Count_of_Rep_Active_Leads__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Data_Ops</group>
    </sharedTo>
</ListView>